# machine_learning_practice

./: pyproject.toml
.claude/: settings.local.json
.claude/skills/update-notes-from-notebook/: SKILL.md
ml_week_2/: classification_notes.md  classification_practice.ipynb  discriminant_analysis.ipynb
ml_week_3/: scikit-learn_intro_ch5.ipynb
